css/main.css
.selector-for-some-widget {
  box-sizing: content-box;
}
body {
	background-image: url('https://videohive.img.customer.envatousercontent.com/files/4e69955e-dfa7-40f7-a8fd-714f49ff35f0/inline_image_preview.jpg?auto=compress%2Cformat&fit=crop&crop=top&max-h=8000&max-w=590&s=ac90f5ca96537f5f9a326b2a43dec9c3');
	background-repeat: no-repeat;
	background-size: cover;
	height: auto;
	max-height: 500px
	max-width: 1700px;
	font-size: calc(12px + 1vw);
	position: relative;
	align-content: center;
	text-align: center;
}


 
#firstCowboy {
  display: none;
  position: absolute;
  width: 10vw;
  height: calc(25vw * (9/16));
  max-height: calc(10em * (9/16));
  max-width: calc(10em * (9/16));
  align-content: flex-end;
  bottom: -310px;
  left: 0px;
  animation-name: moveAcrossScreen;
  animation-duration: 30s;
} 

@keyframes moveAcrossScreen {
	from{transform: translateX(1px)}
	to{transform: translateX(1120px);}
}

#town {
	transform: translateX(600px) translateY(400px) scale(.7);
	display: none;
}





span.gameOver {
	color: red;
	font-size: 25px; 
	font-style: bold;
}

header {
	display: block;
	font-size: calc(20px + 4vw);
	font-family: 'Smokum', cursive;
	text-align: center;
	color: white;
	transform: translate(48%, 10%);
	max-width: 45vw;
}
h4 {
	font-size: 35px;
}


/*start page*/
#exampleModalLongTitle {
	font-family: 'Smokum', cursive;
	font-size: 40px;
}

.modal-body {
	font-family: 'Special Elite', cursive;
	font-size: 20px;
	align-content: center;
	text-align: center;
}
.btn.btn-secondary {
	text-align: center;
	transform: translate(-1px, 2%);
}



.btn {
	font-size: calc(12px + 1vw);
/*	transform: translate(180%, 200%);
	text-align: center;
	transform: translate(48%, 10%);*/
	width: 30vw;
	padding: 5px;

}
#start {
	font-size: calc(12px + 1vw);
/*	transform: translate(240%, 200%);
	text-align: center;
	margin: 5px 1px;
	transform: translate(48%, 10%);*/
	width: 30vw;
	padding: 5px;

}

.button {
	border: 1.5px solid #2a4163;
	background-color: rgba(255, 255, 255, .7);
	padding: 5px 8px;
	border-radius: 14px;
	font-size: 16px;
	color: black;
}


/*questions page*/
.questions {
	display: none;
	position: absolute;
	font-size: calc(16px + 1vw);
	color: white;
	text-shadow: -1px 0 #2a4163, 0 1px #2a4163, 1px 0 #2a4163, 0 -1px #2a4163;
	text-align: center;
	transform: translate(48%, 10%);
	width: 50vw;
}

#qAlt1 {
	display: none;
}
#qAlt2 {
	display: none;
}
#qAlt3 {
	display: none;
}
#qAlt4 {
	display: none;
}
#qAlt5 {
	display: none;
}




#qTwo {
	display: none;
}
#qThree {
	display: none;
}
#qFour {
	display: none;
}
#qFive {
	display: none;
}


#finalQ {
	display: none;
}

.finalBang {
	display: none;
	color: black;
	font-family: 'Gloria Hallelujah', cursive;
	font-size: 30px;
	font-weight: bold;
	background-repeat: no-repeat;
	background-size: cover;
	height: auto;
	max-height: 500px
	max-width: 1700px;
	position: relative;
	align-content: center;
	text-align: center;
}
h3 {
	padding: 50px;
}

/*progress bar*/


#progress {
		transform: translate(200%, 60%);
		width: 22vw;
}





progress[value] {
	display: none;
	width: 22vw;
	height: 20px;
	background-color: black; 
	position: absolute;
	border: 1.5px solid #2a4163;


}
progress[value]::-webkit-progress-bar {
	background-color: #eee;
	border-radius: 2px;
	box-shadow: 0 2px 5px rgba(0, 0, 0, 0.25) inset;
}
progress[value]::-webkit-progress-value {
	background-image: -webkit-linear-gradient(top,
		rgba(255, 255, 255, .25),
		rgba(0, 0, 0, .25)),
	-webkit-linear-gradient(right, #19b323, #e81a1a);
	border-radius: 2px;
	background-size: 35px 20px, 100% 100%, 100% 100%;
}

